build: updated to java 22